# yolo-projectfiles

./: .env  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DIFF_IMPROVEMENTS.md  EDIT_IMPROVEMENTS.md  FIND_IMPROVEMENTS.md  FIND_IMPROVEMENTS_V2.md  GREP_IMPROVEMENTS.md  HASH_IMPROVEMENTS.md  JQ_IMPROVEMENTS.md  JQ_TOOL_DOCUMENTATION.md  LIST_IMPROVEMENTS.md  QUERY_IMPROVEMENTS.md  README.md  READ_IMPROVEMENTS.md  STANDARDIZATION_PROGRESS.md  SUCCESS_MESSAGE_STANDARDS.md  TODO.md  TODO.md.bak  TOOL_OUTPUT_ANALYSIS.md  TOOL_OUTPUT_ENHANCEMENTS.md  TOOL_SUCCESS_MESSAGE_ANALYSIS.md  WRITE_IMPROVEMENTS.md  WRITE_TOOL_IMPROVEMENTS.md  archetect  test-jq-improvements.md  test-jq-troubleshooting.md  test_grep.txt
crates/mcp-projectfiles-bin/: Cargo.toml  README.md
crates/mcp-projectfiles-bin/src/: cli.rs  configure.rs  main.rs  permissions.rs  registration.rs  status.rs
crates/mcp-projectfiles-core/: Cargo.toml  README.md  test_toml_format.rs
crates/mcp-projectfiles-core/src/: config.rs  context.rs  error.rs  handler.rs  lib.rs  protocol.rs  server.rs  theme.rs  tools.rs
crates/mcp-projectfiles-core/src/tools/: calculator.rs  chmod.rs  copy.rs  counter.rs  delete.rs  diff.rs  edit.rs  exists.rs  file.rs  file_type.rs  find.rs  grep.rs  hash.rs  jq.rs.old  kill.rs  list.rs  lsof.rs  mkdir.rs  move.rs  move_file.rs  process.rs  read.rs  stat.rs  system.rs  time.rs  tomlq.rs  touch.rs  tree.rs  utils.rs  wc.rs  write.rs  yq.rs
crates/mcp-projectfiles-core/src/tools/jq/: conditionals.rs  executor.rs  functions.rs  mod.rs  operators.rs  parser.rs
crates/mcp-projectfiles-core/src/tools/query_engine/: INTEGRATION_PLAN.md  README.md  errors.rs  executor.rs  functions.rs  mod.rs  operations.rs  parser.rs
crates/mcp-projectfiles-core/src/tools/yq/: conditionals.rs  executor.rs  functions.rs  mod.rs  operators.rs  parser.rs
crates/mcp-projectfiles-core/src/transports/: mod.rs  sse.rs  stdio.rs
crates/mcp-projectfiles-core/tests/: integration_test.rs  integration_test.rs.bak  jq_advanced_test.rs  structured_data_tools_test.rs  symlink_security_test.rs  yq_advanced_test.rs
crates/yolo-executioner/: Cargo.toml
crates/yolo-executioner/src/: main.rs
crates/yolo-homefiles/: Cargo.toml
crates/yolo-homefiles/src/: main.rs
crates/yolo-memento/: Cargo.toml
crates/yolo-memento/src/: main.rs
crates/yolo-projectfiles/: Cargo.toml
crates/yolo-projectfiles/src/: main.rs
crates/yolo-terminator/: Cargo.toml
crates/yolo-terminator/src/: main.rs
test-files/: append-backup-test.txt  append-test.txt  binary-content.txt  code.rs  encoding-latin1.txt  encoding-test.txt  encoding-utf16be.txt  encoding-utf16le.txt  encoding-utf8-bom.txt  indentation-test.py  large-file.txt  large-text.txt  logger.js  logger.js.bak  metadata-test.txt  mixed-content.txt  moved-not-preserved.txt  moved-preserved.txt  multi-range.txt  regex-test.txt  single-line.txt  special-chars.txt  test-pattern-read.txt  versions.txt
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
