[workspace]
resolver = "2"

members = ["crates/*", "xtask"]

default-members = ["crates/mcp-projectfiles-bin"]

[workspace.package]
edition = "2024"
repository = "https://github.com/example/projectfiles"
license = "MIT"
version = "0.1.0"
publish = true

[workspace.dependencies]
mcp-projectfiles-core = { path = "crates/mcp-projectfiles-core", version = "0.1.0" }

anyhow = "1"
clap = { version = "4", features = ["cargo", "derive", "env", "string"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-schema = { version = "0.5.2", features = [
  "2025_03_26",
  "schema_utils",
] }
rust-mcp-sdk = { version = "0.4.0", features = [
  "server",
  "macros",
  "hyper-server",
] }