[package]
name = "mcp-projectfiles-core"
description = "Mcp Projectfiles: Core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust-mcp-schema.workspace = true
rust-mcp-sdk.workspace = true

[dev-dependencies]
tokio-test = "0.4"
