[package]
name = "mcp-projectfiles-core"
description = "Mcp Projectfiles: Core"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1.11"
parking_lot = "0.12"
rust-mcp-schema.workspace = true
rust-mcp-sdk.workspace = true
diffy = "0.4"
colored = "3.0"
filetime = "0.2"
similar = "2.3"
encoding_rs = "0.8"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
serial_test = "3.0"
