[package]
name = "yolo-projectfiles"
version = "0.1.0"
edition = "2021"
description = "Binary crate for yolo-projectfiles MCP server"

[[bin]]
name = "yolo-projectfiles"
path = "src/main.rs"

[dependencies]
mcp-projectfiles-core = { path = "../mcp-projectfiles-core" }
anyhow = "1"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }